--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,4 @@
 [versions]
-agp = "8.2.1"
-kotlin = "1.9.22"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -13,13 +11,23 @@ lifecycle-viewmodel-ktx = "2.7.0"
 okhttp = "4.11.0"
 retrofit = "2.9.0"
 pagingVersion = "3.2.1"
-pagingCompose = "1.0.0-alpha20"
 lifecycle-viewmodel-compose = "2.7.0"
 material3-compose = "1.1.2"
 koin = "3.5.3"
-kotlin-gradlePlugin = "1.9.20"
+kotlin-gradlePlugin = "1.9.22"
+android-gradlePlugin = "8.2.1"
+detekt = "1.23.3"
+
+[plugins]
+dependencyGraphGenerator = "com.vanniktech.dependency.graph.generator:0.8.0"
+dependencyVersionUpdates = "com.github.ben-manes.versions:0.49.0"
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 
 [libraries]
+
+android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "android-gradlePlugin" }
+kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-gradlePlugin" }
+
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
@@ -33,7 +41,9 @@ ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 compose-paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "pagingVersion" }
 compose-paging = { group = "androidx.paging", name = "paging-compose", version.ref = "pagingVersion" }
 
-kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-gradlePlugin" }
+detekt-api = { module = "io.gitlab.arturbosch.detekt:detekt-api", version.ref = "detekt" }
+detekt-ktLint = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+detekt-test = { module = "io.gitlab.arturbosch.detekt:detekt-test", version.ref = "detekt" }
 
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 androidx-navigation-runtime = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "androidx-navigation" }
@@ -47,6 +57,8 @@ ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
 material = { group = "androidx.compose.material", name = "material" }
 material3-compose = { group = "androidx.compose.material3", name = "material3", version.ref = "material3-compose" }
+compose-lottie = "com.airbnb.android:lottie-compose:5.2.0"
+glide = "com.github.bumptech.glide:compose:1.0.0-beta01"
 
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
@@ -58,14 +70,9 @@ okhttp-logginginterceptor = { module = "com.squareup.okhttp3:logging-interceptor
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 
-
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin" }
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
-
-[plugins]
-androidApplication = { id = "com.android.application", version.ref = "agp" }
-kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
 [bundles]
 compose = ["activity-compose", "compose-bom", "ui", "ui-graphics", "ui-tooling", "ui-tooling-preview", "material3", "material"]
