--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ kotlin-gradlePlugin = "1.9.22"
 android-gradlePlugin = "8.2.2"
 detekt = "1.23.3"
 uiTooling = "1.6.0"
+coroutines = "1.7.3"
 
 [plugins]
 dependencyGraphGenerator = "com.vanniktech.dependency.graph.generator:0.8.0"
@@ -38,6 +39,7 @@ compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = 
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
+coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 
 compose-paging-runtime = { group = "androidx.paging", name = "paging-runtime", version.ref = "pagingVersion" }
 compose-paging = { group = "androidx.paging", name = "paging-compose", version.ref = "pagingVersion" }
@@ -45,6 +47,7 @@ compose-paging = { group = "androidx.paging", name = "paging-compose", version.r
 detekt-api = { module = "io.gitlab.arturbosch.detekt:detekt-api", version.ref = "detekt" }
 detekt-ktLint = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 detekt-test = { module = "io.gitlab.arturbosch.detekt:detekt-test", version.ref = "detekt" }
+coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 androidx-navigation-runtime = { module = "androidx.navigation:navigation-runtime-ktx", version.ref = "androidx-navigation" }
@@ -53,12 +56,18 @@ androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", ver
 
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+junit-core = "junit:junit:4.13.2"
+junit-params = "pl.pragmatists:JUnitParams:1.1.1"
+kotest-assertions = "io.kotest:kotest-assertions-core-jvm:5.6.2"
+mockk = "io.mockk:mockk:1.13.5"
+mockk-agent = "io.mockk:mockk-agent-jvm:1.13.5"
 
 material3 = { group = "androidx.compose.material3", name = "material3" }
 material = { group = "androidx.compose.material", name = "material" }
 material3-compose = { group = "androidx.compose.material3", name = "material3", version.ref = "material3-compose" }
 compose-lottie = "com.airbnb.android:lottie-compose:5.2.0"
 glide = "com.github.bumptech.glide:compose:1.0.0-beta01"
+androidx-splash = "androidx.core:core-splashscreen:1.0.1"
 
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle-viewmodel-ktx" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
